# drlibs-cmake-package

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
src/: dr_wav.c
